<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reg.regActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="465dp"
        android:background="@drawable/ic_shapelogo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        tools:srcCompat="@drawable/ic_shapelogo" />

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="406dp"
        android:text="@string/welcome_text"
        android:textColor="@color/black"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass_editText"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="387dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="197dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="296dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="40dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="261dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="360dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pass_textView"
        android:layout_width="71dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="261dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="328dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="463dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="133dp"
        android:background="@color/doger_blue"
        android:text="@string/registrate"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="328sp"
        android:layout_height="19sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="86dp"
        android:text="@string/social_media"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/google_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_vectorgoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_vectorgoogle" />

    <ImageButton
        android:id="@+id/facebook_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_vectorfacebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_vectorfacebook" />


</androidx.constraintlayout.widget.ConstraintLayout>